[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["wa101 <wadhah.mahroug15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
pylint = "^2.13.9"
black = "^22.3.0"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
